--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-document-picker": "^9.1.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-modal": "^13.0.1",
@@ -23,6 +25,7 @@
     "react-native-screens": "^3.30.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
