--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,15 +26,20 @@ if linkage != nil
 end
 
 target 'health_sns' do
+  $RNFirebaseAsStaticFramework = true
   config = use_native_modules!
-
+  
+  pod 'FirebaseAuth' 
+  pod 'FirebaseFirestore'
+  use_frameworks! :linkage => :static
+  pod 'GoogleUtilities', :modular_headers => true
   use_react_native!(
     :path => config[:reactNativePath],
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    # :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
