--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ios:dev": "react-native run-ios --scheme Development",
+    "ios:prod": "react-native run-ios --scheme Production"
   },
   "dependencies": {
     "@react-native-firebase/app": "^19.2.0",
     "@react-native-firebase/auth": "^19.2.0",
     "@react-native-firebase/firestore": "^19.2.0",
+    "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-native-seoul/kakao-login": "^5.3.1",
+    "@react-native-seoul/naver-login": "^4.0.0-beta.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
@@ -20,7 +25,9 @@
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-config": "^1.5.1",
     "react-native-document-picker": "^9.1.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-gifted-chat": "^2.4.0",
