회원가입 구체화 및 로그인 구현+ (카카오, 구글)

--- a/ios/health_sns/Info.plist
+++ b/ios/health_sns/Info.plist
@@ -42,6 +42,14 @@
 				<string>http://ShareBBy.com/login</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.3161149758-ron2bhaul6q1cmnhrj2nbg0cbd8arvqv</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
