--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "lottie-ios": "^4.4.1",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-config": "^1.5.1",
@@ -33,6 +35,7 @@
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-modal": "^13.0.1",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "^6.3.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
